fix: remove blinking cursor on dark mode

--- a/stylesheets/global-dark-mode.css
+++ b/stylesheets/global-dark-mode.css
@@ -15,7 +15,6 @@ body.dark main .hero .mouse::before {
 
 body.dark main .hero .right .post-text .effect-wrapper {
   border-right: 2px solid #e8e8e8;
-  animation: 0.75s step-end infinite blink_dark;
 }
 
 body.dark section.about-me .btn-container .more-less-btn {
